Bug 1876735 - [a11y]Increase contrast for "Try again" button r=android-reviewers,mcarare
Increase contrast for "Try again" button from the "Address not found" page in dark mode. The color added to "Try again" button is the same color used for "Ready to scan" button from Sync and save your data page which achieve the required contrast.



| Before | After | Button "Ready to scan" |
| {F13065868} | {F13065870} | {F13065887} |

Differential Revision: https://phabricator.services.mozilla.com/D238559

--- a/mobile/android/fenix/app/src/main/assets/low_and_medium_risk_error_style.css
+++ b/mobile/android/fenix/app/src/main/assets/low_and_medium_risk_error_style.css
@@ -26,7 +26,7 @@
   :root {
     --background-color: #15141a;
     --text-color: #fbfbfe;
-    --primary-button-color: #9059ff;
+    --primary-button-color: #7542e5;
     --primary-button-text-color: #ffffff;
     --secondary-button-color: #e0e0e6;
     --secondary-button-text-color: #312a65;
